<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <LinearLayout
        style="@style/wrap_layout"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Top -->
        <LinearLayout
            android:id="@+id/language_bar"
            style="@style/top_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/pref_language_title" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/dropdown" />
        </LinearLayout>

        <!-- Parting line -->
        <View style="@style/bg_line" />

        <!-- Middle -->
        <LinearLayout
            android:id="@+id/scientific"
            style="@style/mid_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/pref_scientific_title" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/science_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View style="@style/bg_line" />

        <!-- Middle -->
        <LinearLayout
            android:id="@+id/decimal_bar"
            style="@style/mid_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/pref_format_title" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/dropdown" />
        </LinearLayout>

        <View style="@style/bg_line" />

        <!-- Middle -->
        <LinearLayout
            android:id="@+id/unit_order"
            style="@style/mid_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/pref_unit_order" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/dropdown" />
        </LinearLayout>

        <View style="@style/bg_line" />

        <!-- Bottom -->
        <LinearLayout
            android:id="@+id/about_activity"
            style="@style/bottom_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/about" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:rotation="270"
                android:src="@drawable/dropdown" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>