<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="146dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="Version 0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/wrap_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version_number">

        <!-- Top -->
        <LinearLayout style="@style/top_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tool_tips"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/tool_tips_text" />

        </LinearLayout>

        <!-- Parting line -->
        <View style="@style/bg_line" />

        <!-- Middle -->
        <LinearLayout
            android:id="@+id/feedback"
            style="@style/mid_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/feedback" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:rotation="270"
                android:src="@drawable/dropdown" />
        </LinearLayout>

        <View style="@style/bg_line" />

        <!-- Bottom -->
        <LinearLayout
            android:id="@+id/open_source"
            style="@style/bottom_layout">

            <TextView
                style="@style/usertext"
                android:text="@string/open_source" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:rotation="270"
                android:src="@drawable/dropdown" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.866">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/allRightReserved" />
    </LinearLayout>




</android.support.constraint.ConstraintLayout>