<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/convert_from"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="right"
        android:hint="@string/input_value"
        android:inputType="number|numberDecimal"
        android:paddingRight="35dp"
        app:layout_constraintEnd_toStartOf="@+id/single_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/clear_text"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/presence_offline"
        app:layout_constraintBottom_toBottomOf="@+id/value_input"
        app:layout_constraintEnd_toEndOf="@+id/value_input"
        app:layout_constraintTop_toTopOf="@+id/value_input" />

    <Spinner
        android:id="@+id/single_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:paddingRight="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/value_input"
        app:layout_constraintTop_toBottomOf="@+id/textView"></Spinner>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/single_spinner"
        app:layout_constraintEnd_toEndOf="@+id/single_spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/single_spinner"
        app:layout_constraintTop_toTopOf="@+id/single_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/convert_to"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_spinner" />

    <com.bai.unitconverter.MultiSelectionSpinner
        android:id="@+id/multi_spinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/multi_spinner"
        app:layout_constraintEnd_toEndOf="@+id/multi_spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/multi_spinner"
        app:layout_constraintTop_toTopOf="@+id/multi_spinner"
        app:layout_constraintVertical_bias="0.0" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/conversion_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi_spinner"></android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>